--- a/web_responsive/static/src/less/variables.less
+++ b/web_responsive/static/src/less/variables.less
@@ -5,7 +5,7 @@
 @app-drawer-icon-size:      6em;
 @app-drawer-icon-margin:    1em;
 @app-drawer-width:          80%;
-@app-drawer-title-height:   @navbar-height;
+@app-drawer-title-height:   54px;
 
 // Navbar
 @app-drawer-navbar-height:  @navbar-height / 2;
